<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="division">Divsion</string>
    <string name="multiply">Multiply</string>

    <string name="input_one">Enter Number 1</string>
    <string name="input_two">Enter Number 2</string>


    <string name="result"> Result</string>
</resources>
